--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -182,6 +182,11 @@
 .hero-area-inner {
     padding-inline-end: unset;
     padding-right: 0;
+    padding-top: 100px;
+
+    @include addMediaQuery(phone-l) {
+        padding-top: 150px;
+    }
 }
 
 .hero-area-inner .area-shape-1 {
